change color testo con funzione click

--- a/index-bonus.html
+++ b/index-bonus.html
@@ -18,7 +18,7 @@
 
 <img :src= "img">
 
-<button @change = "Click" type="button" name="button">Cliccami</button>
+<button @change = "change" type="button" name="button">Cliccami</button>
 </div>
 
 
